--- a/APIEasyPrint/appsettings.json
+++ b/APIEasyPrint/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-O61DJJNG\\SQLEXPRESS;Database=EasyPrint;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "CLOUD": "Server=tcp:easyprint.database.windows.net,1433;Initial Catalog=EasyPrint;Persist Security Info=False;User ID=EasyprintAdmin1;Password=$Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CLOUD": "Server=tcp:easyprint.database.windows.net,1433;Initial Catalog=EasyPrint;Persist Security Info=False;User ID=EasyprintAdmin1;Password=$Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "CLOUD2": "Server=tcp:easyprint.database.windows.net,1433;Initial Catalog=EasyPrintNew;Persist Security Info=False;User ID=EasyprintAdmin1;Password=$Admin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "Logging": {
     "LogLevel": {
